--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>Erin Maier</strong>, astronomer<br />
-				space telescopes - high contrast imaging - education - outreach</h1>
+				<h1><strong>Erin Maier, astronomer</strong><br /></h1>
+				<h2>space telescopes | high contrast imaging | education | outreach</h2>
 			</header>
 
 		<!-- Main -->
