--- a/research.html
+++ b/research.html
@@ -45,8 +45,8 @@
 							<h2>Recent Work</h2>
 							<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
-									<a href="images/fulls/01.jpg" class="image fit thumb", data-poptrox="ignore"><img src="images/thumbs/01.jpg" alt="" /></a>
-									<h3>Magna sed consequat tempus</h3>
+									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore"><img src="images/spacenb.jpg" alt="" /></a>
+									<h3>The Nonbinary Fraction: Looking Towards the Future of Gender Equity in Astronomy</h3>
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								</article>
 								<article class="6u$ 12u$(xsmall) work-item">
