--- a/research.html
+++ b/research.html
@@ -33,8 +33,8 @@
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Curriculum Vitae</a></li>
-							<li><a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMaier%2C%20E%2FMaier%2C%20Erin%22%20OR%20author_facet_hier%3A%221%2FMaier%2C%20E%2FMaier%2C%20Erin%20R%22%20OR%20author_facet_hier%3A%221%2FMaier%2C%20E%2FMaier%2C%20E%20%20R%22)&p_=0&q=author%3A(%22Maier%2C%20Erin%20R.%22)&sort=date%20desc%2C%20bibcode%20desc" class="button">Publications</a></li>
+							<li><a href="#" class="button" arget="_blank">Curriculum Vitae</a></li>
+							<li><a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMaier%2C%20E%2FMaier%2C%20Erin%22%20OR%20author_facet_hier%3A%221%2FMaier%2C%20E%2FMaier%2C%20Erin%20R%22%20OR%20author_facet_hier%3A%221%2FMaier%2C%20E%2FMaier%2C%20E%20%20R%22)&p_=0&q=author%3A(%22Maier%2C%20Erin%20R.%22)&sort=date%20desc%2C%20bibcode%20desc" class="button" target="_blank">Publications</a></li>
 						</ul>
 
 					</section>
@@ -45,7 +45,7 @@
 							<h2>Recent Work</h2>
 							<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
-									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore"><img src="images/spacenb.jpg" alt="" /></a>
+									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore" target="_blank"><img src="images/spacenb.jpg" alt="" /></a>
 									<h3>The Nonbinary Fraction: Looking Towards the Future of Gender Equity in Astronomy</h3>
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								</article>
