--- a/research.html
+++ b/research.html
@@ -45,15 +45,15 @@
 							<h2>Recent Work</h2>
 							<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
-									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore" target="_blank"><img src="images/spacenb.jpg" alt="" /></a>
+									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore" target="_blank"><img src="images/spacenb.jpg" alt="The nonbinary flag made from variously colored images of space and stars" /></a>
 									<h3>The Nonbinary Fraction: Looking Towards the Future of Gender Equity in Astronomy</h3>
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								</article>
 								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+									<a href="https://arxiv.org/abs/1807.04786" class="image fit thumb", data-poptrox="ignore", target="_blank"><img src="images/lbt.jpg" alt="The Large Binocular telescope as seen from above" /></a>
 									<h3>Ultricies lacinia interdum</h3>
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								</article>
+								</article> 
 								<article class="6u 12u$(xsmall) work-item">
 									<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 									<h3>Tortor metus commodo</h3>
