--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								</article>
 								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="https://arxiv.org/abs/1807.04786" class="image fit thumb", data-poptrox="ignore", target="_blank"><img src="images/lbt.jpg" alt="The Large Binocular telescope as seen from above" /></a>
+									<a href="https://arxiv.org/abs/1807.04786" class="image fit thumb", data-poptrox="ignore", target="_blank" height=100% overflow="hidden"><img src="images/lbt.jpg" alt="The Large Binocular telescope as seen from above" /></a>
 									<h3>Ultricies lacinia interdum</h3>
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								</article> 
