--- a/research.html
+++ b/research.html
@@ -47,37 +47,14 @@
 								<article class="6u 12u$(xsmall) work-item">
 									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore" target="_blank"><img src="images/spacenb.jpg" alt="The nonbinary flag made from variously colored images of space and stars" /></a>
 									<h3>The Nonbinary Fraction: Looking Towards the Future of Gender Equity in Astronomy</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+									<p>Astro2020 APC white paper</p>
 								</article>
 								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="https://arxiv.org/abs/1807.04786" class="image fit thumb", data-poptrox="ignore", target="_blank"><img src="images/lbtout.jpg" alt="The Large Binocular telescope as seen from outside, dome open" /></a>
-									<h3>Ultricies lacinia interdum</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								</article> 
-								<article class="6u 12u$(xsmall) work-item">
-									<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-									<h3>Tortor metus commodo</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								</article>
-								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-									<h3>Quam neque phasellus</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								</article>
-								<article class="6u 12u$(xsmall) work-item">
-									<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-									<h3>Nunc enim commodo aliquet</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								</article>
-								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-									<h3>Risus ornare lacinia</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+									<a href="https://arxiv.org/abs/1807.04786" class="image fit thumb", data-poptrox="ignore", target="_blank"><img src="images/lbtoutresize.jpg" alt="The Large Binocular telescope as seen from outside, dome open" /></a>
+									<h3>A two-band approach to n&lambda; phase error corrections with LBTI's PHASECam</h3>
+									<p>Proceedings of the SPIE</p>
 								</article>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Full Portfolio</a></li>
-							</ul>
 						</section>
 
 				<!-- Four -->
