--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>Erin Maier, astronomer</strong><br /></h1>
+				<h1><strong>Erin Maier</strong>, astronomer<br /></h1>
 				<h2>space telescopes | high contrast imaging | education | outreach</h2>
 			</header>
 
