--- a/research.html
+++ b/research.html
@@ -45,12 +45,12 @@
 							<h2>Recent Work</h2>
 							<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
-									<a href="https://arxiv.org/abs/1907.04893" class="image fit thumb", data-poptrox="ignore" target="_blank"><img src="images/spacenb.jpg" alt="The nonbinary flag made from variously colored images of space and stars" /></a>
+									<a href="https://arxiv.org/abs/1907.04893" class="image fit", data-poptrox="ignore" target="_blank"><img src="images/spacenb.jpg" alt="The nonbinary flag made from variously colored images of space and stars" /></a>
 									<h3>The Nonbinary Fraction: Looking Towards the Future of Gender Equity in Astronomy</h3>
 									<p>Astro2020 APC white paper</p>
 								</article>
 								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="https://arxiv.org/abs/1807.04786" class="image fit thumb", data-poptrox="ignore", target="_blank"><img src="images/lbtoutresize.jpg" alt="The Large Binocular telescope as seen from outside, dome open" /></a>
+									<a href="https://arxiv.org/abs/1807.04786" class="image fit", data-poptrox="ignore", target="_blank"><img src="images/lbtoutresize.jpg" alt="The Large Binocular telescope as seen from outside, dome open" /></a>
 									<h3>A two-band approach to n&lambda; phase error corrections with LBTI's PHASECam</h3>
 									<p>Proceedings of the SPIE</p>
 								</article>
