--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Erin Maier</strong>, astronomer<br /></h1>
 				<h2>space telescopes | high contrast imaging | education | outreach</h2>
-        <ul class="actions">
-						<li><a href="/" class="button special">Home</a></li>
-						<li><a href="/research" class="button special">Research</a></li>
-            <li><a href="/about" class="button special">About</a></li>
-						<li><a href="#" class="button special">Contact</a></li>
+        			<ul class="actions">
+					<li><a href="/" class="button special small">Home</a></li>
+					<li><a href="/research" class="button special small">Research</a></li>
+            				<li><a href="/about" class="button special small">About</a></li>
+					<li><a href="#" class="button special small">Contact</a></li>
 				</ul>
 			</header>
 
