--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
 				<h1><strong>Erin Maier</strong>, astronomer<br /></h1>
 				<h2>space telescopes | high contrast imaging | education | outreach</h2>
         			<ul class="actions">
-					<li><a href="/" class="button special small">Home</a></li>
-					<li><a href="/research" class="button special small">Research</a></li>
-            				<li><a href="/about" class="button special small">About</a></li>
-					<li><a href="#" class="button special small">Contact</a></li>
+					<li><a href="/" class="button">home</a></li>
+					<li><a href="/research" class="button">research</a></li>
+            				<li><a href="/about" class="button">about</a></li>
+					<li><a href="#" class="button">contact</a></li>
 				</ul>
 			</header>
 
