--- a/about.html
+++ b/about.html
@@ -16,7 +16,14 @@
 	<body id="top">
 
 		<!-- Header -->
+			<div id="navbar">
+				<a href="/">home</a>
+				<a href="/research">research</a>
+				<a href="/about">about</a>
+				<a href="#">contact</a>
+			</div>
 			<header id="header">
+				
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Erin Maier</strong>, astronomer<br /></h1>
 				<h2>space telescopes | high contrast imaging | education | outreach</h2>
