--- a/about.html
+++ b/about.html
@@ -19,10 +19,12 @@
 			<header id="header">
 				
 				<div id="navbar">
-					<a href="/">home</a>
-					<a href="/research">research</a>
-					<a href="/about">about</a>
-					<a href="#">contact</a>
+					<ul>
+						<li><a href="/">home</a></li>
+						<li><a href="/research">research</a></li>
+						<li><a href="/about">about</a></li>
+						<li><a href="#">contact</a></li>
+					</ul>
 				</div>
 				
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
