--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 				<a href="/">home</a>
 				<a href="/research">research</a>
 				<a href="/about">about</a>
-				<<a href="#">contact</a>
+				<a href="#">contact</a>
 			</div>
 			<header id="header">			
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
