--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 			<div class="navbar">
 				<a href="/">home</a>
 				<a href="/research">research</a>
-				<a href="/about">about</a>
+				<a href="/about" class="active">about</a>
 				<a href="#">contact</a>
 			</div>
 			
