--- a/research.html
+++ b/research.html
@@ -16,6 +16,12 @@
 	<body id="top">
 
 		<!-- Header -->
+			<div class="navbar">
+				<a href="/">home</a>
+				<a href="/research" class="active">research</a>
+				<a href="/about">about</a>
+				<a href="#">contact</a>
+			</div>
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Erin Maier</strong>, astronomer<br /></h1>
