--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<a href="/" class="active">home</a>
 				<a href="/research">research</a>
 				<a href="/about">about</a>
-				<a href="#">contact</a>
+				<a href="/contact">contact</a>
 			</div>
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
