--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
 				<a href="/">home</a>
 				<a href="/research" class="active">research</a>
 				<a href="/about">about</a>
-				<a href="#">contact</a>
+				<a href="/contact">contact</a>
 			</div>
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
