--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 				<a href="/">home</a>
 				<a href="/research">research</a>
 				<a href="/about" class="active">about</a>
-				<a href="#">contact</a>
+				<a href="/contact">contact</a>
 			</div>
 			
 			<header id="header">
