--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
 		<!-- Header -->
 			<div class="navbar">
 				<a href="/">home</a>
-				<a href="/research" class="active">research</a>
+				<a href="/research">research</a>
 				<a href="/about">about</a>
-				<a href="#">contact</a>
+				<a href="/contact" class="active">contact</a>
 			</div>
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
