--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>The skyline is a promise, not a bound.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
-							<li><a href="/research" class="button">Research</a></li>
-						</ul>
+						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/"> University of Arizona, where I work with Dr. Ewan Douglas
+					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are in instrumentation for high-resolution,
+						   high contrast imaging, with a scientific focus on dust and debris disks.</p>
+							
+						<p>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP). CDEEP is a proposed
+					           small-satellite mission to study debris disks of nearby stars in scattered light. I am also working on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) models.</p>
+						
+						<p>You can read more about me and my research on the other pages of this site.</p>
 					</section>
 
 
