--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 						<header class="major">
 							<h2>The skyline is a promise, not a bound.</h2>
 						</header>
-						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/"> University of Arizona, where I work with Dr. Ewan Douglas
-					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are in instrumentation for high-resolution,
-						   high contrast imaging, with a scientific focus on dust and debris disks.</p>
+						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
+					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for high-resolution,
+						   high contrast imaging, with a scientific focus on dust/debris disks.</p>
 							
 						<p>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP). CDEEP is a proposed
-					           small-satellite mission to study debris disks of nearby stars in scattered light. I am also working on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) models.</p>
+					           small-satellite mission to study debris disks of nearby stars in scattered light. I am also working on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
 						
-						<p>You can read more about me and my research on the other pages of this site.</p>
+						<p>Explore the site to learn more about me and my research.</p>
 					</section>
 
 
