--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for high-resolution,
 						   high contrast imaging, with a scientific focus on dust/debris disks.</p>
 							
-						<p>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP). CDEEP is a proposed
-					           small-satellite mission to study debris disks of nearby stars in scattered light. I am also working on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
+						<p>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP), a proposed
+					           small-satellite mission to study debris disks of nearby stars in scattered light. I also work on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
 						
 						<p>Explore the site to learn more about me and my research.</p>
 					</section>
