--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><blockquote>The skyline is a promise, not a bound.</blockquote</h2>
-								<h5>-- JOHN MASEFIELD</h5>
+							<h2><blockquote>The skyline is a promise, not a bound.</blockquote></h2>
+								<h5>&mdash; JOHN MASEFIELD</h5>
 						</header>
 						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
 					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for high-resolution,
