--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><blockquote>The skyline is a promise, not a bound.</br><h5>&mdash; JOHN MASEFIELD</h5></blockquote></h2>
-								
+							<h2><blockquote>The skyline is a promise, not a bound.</blockquote></h2>
+							<p>&mdash; JOHN MASEFIELD</p>	
 						</header>
 						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
 					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for high-resolution,
@@ -44,7 +44,7 @@
 						<p>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP), a proposed
 					           small-satellite mission to study debris disks of nearby stars in scattered light. I also work on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
 						
-						<p>Explore the site to learn more about me and my research.</p>
+						<p>Finally, I am nonbinary, and I use they/them pronouns. Explore the site to learn more about me and my research.</p>
 					</section>
 
 
