--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header class="major">
 							<blockquote>
 								<h2>The skyline is a promise, not a bound.</h2>
-								<h4>&mdash; JOHN MASEFIELD</h4>
+								<p>&mdash; JOHN MASEFIELD</p>
 							</blockquote>
 						</header>
 						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
