--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<p>&mdash; JOHN MASEFIELD</p>
 							</blockquote>
 						</header>
-						<p>I am a Ph.D. researcher in astrophysics at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
+						<p>I am a Ph.D. researcher at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
 					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for high-resolution,
 						   high contrast imaging, with a scientific focus on dust/debris disks.</p>
 							
