--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							</blockquote>
 						</header>
 						<p><span class="image right"><img src="images/mestairs.JPG" alt="" /></span>I am a Ph.D. researcher at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
-					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for high-resolution,
-						   high contrast imaging, with a scientific focus on dust/debris disks. I am also interested in outreach, particularly in introducing middle and high school students to engineering concepts and technology/instrumentation as a field of research.</p>
+					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for
+						   high contrast imaging, with a scientific focus on dust/debris disks. I am also interested in outreach, particularly in introducing middle/high school students to engineering concepts and technology/instrumentation as a field of research.</p>
 						<p><span class="image left"><img src="images/melbt2.JPG" alt="" /></span>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP), a proposed
 					           small-satellite mission to study debris disks of nearby stars in scattered light. I also work on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
 						<p>Finally, I am nonbinary, and I use they/them pronouns. Explore the site to learn more about me and my research.</p>
