--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 					<section id="one">
 						<header class="major">
 							<blockquote>
-								<h3>The skyline is a promise, not a bound.</h3>
-								<p>&mdash; JOHN MASEFIELD</p>
+								<h2>The skyline is a promise, not a bound.</h2>
 							</blockquote>
 						</header>
 						<p><span class="image right"><img src="images/mestairs.JPG" alt="" /></span>I am a Ph.D. researcher at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
@@ -44,7 +43,7 @@
 						   high contrast imaging, with a scientific focus on dust/debris disks. I am also interested in outreach, particularly in introducing middle/high school students to engineering concepts and technology/instrumentation as a field of research.</p>
 						<p><span class="image left"><img src="images/melbt2.JPG" alt="" /></span>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP), a proposed
 					           small-satellite mission to study debris disks of nearby stars in scattered light. I also work on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
-						<p>Finally, I am nonbinary, and I use they/them pronouns. Explore the site to learn more about me and my research.</p>
+						<p>Finally, I am nonbinary, and I use they/them pronouns. Explore to learn more about me and my research. Quote by John Masefield.</p>
 					</section>
 
 		<!-- Footer -->
@@ -54,7 +53,7 @@
 					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; ESO</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
