--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>&quote;The skyline is a promise, not a bound.&quote;</h2>
-							<p>&mdash; JOHN MASEFIELD
+							<h2>&quot;The skyline is a promise, not a bound.&quot;</h2>
+							<p>&mdash; JOHN MASEFIELD</p>
 						</header>
 						<p><span class="image right"><img src="images/mestairs.JPG" alt="" /></span>I am a Ph.D. researcher at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
 					           in the <a href="https://uasal.github.io/">University of Arizona Space Astrophysics Laboratory</a>. My primary research interests are instrumentation for
