--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>&quot;The skyline is a promise, not a bound.&quot;</h2>
+							<h2><i>&quot;The skyline is a promise, not a bound.&quot;</i></h2>
 							<p>&mdash; JOHN MASEFIELD</p>
 						</header>
 						<p><span class="image right"><img src="images/mestairs.JPG" alt="" /></span>I am a Ph.D. researcher at the <a href="https://www.as.arizona.edu/">University of Arizona</a>, where I work with Dr. Ewan Douglas
