--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						   high contrast imaging, with a scientific focus on dust/debris disks. I am also interested in outreach, particularly in introducing middle/high school students to engineering concepts and technology/instrumentation as a field of research.</p>
 						<p><span class="image left"><img src="images/melbt2.JPG" alt="" /></span>My dissertation work focuses on the development of a high-contrast vacuum testbed for the Coronagraphic Debris and Exoplanet Exploring Payload (CDEEP), a proposed
 					           small-satellite mission to study debris disks of nearby stars in scattered light. I also work on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
-						<p>Finally, I am nonbinary, and I use they/them pronouns. Explore to learn more about me and my research.</p>
+						<p>I am nonbinary, and I use they/them pronouns. Explore to learn more about me and my research.</p>
 					</section>
 
 		<!-- Footer -->
