--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
 					           small-satellite mission to study debris disks of nearby stars in scattered light. I also work on debris disk studies using Hubble Space Telescope (HST) data and Wide Field Infrared Space Telescope (WFIRST) simulations.</p>
 						<p>I am nonbinary, and I use they/them pronouns. Explore to learn more about me and my research.</p>
 					</section>
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://twitter.com/so_erinaceous" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/ermaier" class="icon fa-github"><span class="label">Github</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; ESO</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
