--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Erin Maier</strong>, astronomer<br /></h1>
+				<h3>they/them/theirs</h3>
 				<h2>space telescopes | high contrast imaging | education | outreach</h2>
 			</header>
 
